welcome.lessons.welcome.bat.bool1.LoneTeen.scala.code
def loneTeen(a:Int, b:Int):Boolean = {
  if ( a<=19 & a>=13){
    if ( b<=19 & b>=13){
      return false}
    else{
      return true
    }
   if ( b<=19 & b>=13){
     if ( a<=19 & a>=13){
      return false}
    else{
      return true
    } 
   }
   else{
     return false
   }
  }
}